- Sieve: Remove :create flag in fileinto command
- Tickets: Leave ticket blank by default didn't work anymore
- Calendar: Set resource title of private event to "Private"

10-09-2019 6.2.122
- Email: Fixed issue with utf-8 chars in attachment name
- Caldav: events with status needs-action were not synced. Change status to needs-action to tentative as needs-action is not a valid vevent status. 

15-08-2019 6.2.121
- Tickets: Fixed changing from agent ticket type to customer ticket type
- DAV: Fixed PHP Fatal error:  Uncaught Error: Call to a member function checkPermissionLevel() on boolean in /usr/share/groupoffice/modules/files/model/Folder.php:1322

14-06-2019 6.2.120
- Billing: grouping invoice items could make them dissappear.

12-06-2019 6.2.119
- Calendar: Fixed issue that event delete was not logged anymore in the Activitylog 
- Projects2, ProjectReport: Only show jobs who have timeentries between the given start and end date.
- Projects2, ProjectReport: Added Job column to timeentries grid.
- Fixed firefox keyboard navigation problem in grids
- Fixed issue that foldernotifications could not be checked anymore after a folder was deleted.

03-06-2019 6.2.118
- Email: Detect charset from HTML body if not present in IMAP structure
- Files: Ignore permissions on folder notifications
- Comments: Add comments module to modulemanager when installed.
- Core: Added isDeleted() function to ActiveRecord which will return a boolean
- Core: Admin user could remove admin user from an ACL
- Files: Users that no longer had folder permissions still received notifications. Ticket #201918666.

25-04-2019 6.2.117
- Notes: Implemented delete action in category controller
- Billing: Fixed rounding the vat of orders. It now calculates the vat per orderItem instead of the total of the order.

21-03-2019 6.2.116
- Core: Empty cache folder instead of delete 2
- Core: CLI Delete methods for notes and folders
- Billing: remoteGroup and remotSort on to fix sorting isue with item groups