@@ -1,6 +1,7 @@
 - Sieve: Remove :create flag in fileinto command
 - Tickets: Leave ticket blank by default didn't work anymore
 - Calendar: Set resource title of private event to "Private"
+- Core: Added $config["disable_links_for"] = ['GO\\Modules\\Tickets\\Model\\Ticket'];
 
 10-09-2019 6.2.122
 - Email: Fixed issue with utf-8 chars in attachment name
